2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:	Clean up '.PHONY:' targets: Arrange those
				common to Tcl and Tk as in Tcl's Makefile.in,
				add any missing ones and remove duplicates.

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  [Bug 2446711]: Remove 'allpatch' target.

2010-12-17  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:  Use 'rpmbuild', not 'rpm' [Bug 2537626].

2010-12-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkMain.c:  refactor isatty() function for Windows.
	* win/tkWinImage.c:  better warning message.
	* win/tkWinInit.c:   Let TkpDisplayWarning() send the message
	directly to the debugger, if available, otherwise do as before.

2010-12-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:       [Patch 3124554]: Move WishPanic from Tk to Tcl
	* win/winMain.c:      Remove special MessageBox'es here, since every
	panic-related thing is now handled correctly by Tcl.

2010-12-15  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/Makefile.in:	Installer Improvements.
	* unix/install-sh:	Similar to Tcl [Patch 3101127].

2010-12-15  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkMain.c:  [Patch #3124683]: platform specific stuff in (tcl|tk)Main.c

2010-12-13  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:      [Bug 3135271] Link error due to hidden
	* unix/configure:    symbols (CentOS 4.2)  (autoconf-2.59)
    * generic/tkMain.c:   Change "Application initialization failed" to
    * tests/main.test:    "application-specific initialization failed",
    for consistency with Tcl.
	* win/tkWin32Dll.c:   See also: [Patch 1910041] and [Patch 3059922]. SEH emulation
	on Win64 was not correct here: it sometimes results in a crash. Contrary to the
	other places, the code here is not meant to protect from OS bugs, but to protect
	Finalizing Tk when the application went in an invalid state.

2010-12-12  Stuart Cassoff  <stwo@users.sourceforge.net>