@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkUnixRFont.c,v 1.36 2010/12/02 11:38:29 dkf Exp $
+ * RCS: @(#) $Id: tkUnixRFont.c,v 1.37 2011/01/06 05:58:16 stwo Exp $
  */
 
 #include "tkUnixInt.h"
@@ -115,7 +115,7 @@ GetFont(
 		    FC_FAMILY, FcTypeString, "sans",
 		    FC_SIZE, FcTypeDouble, 12.0,
 		    FC_MATRIX, FcTypeMatrix, &mat,
-		    NULL);
+		    (void *) NULL);
 	}
 	if (!ftFont) {
 	    /*
